# gEngine

./: .gitignore  CMakeLists.txt  README.md  build_msbuild.bat  build_ninja.bat  create_sln2022.bat  gEngine.build.sh
.github/workflows/: build.yml
Editor/: CMakeLists.txt  GnMainWindow.cpp  GnMainWindow.h  GnMainWindow.ui  main.cpp
Editor/DockWidget/: PIEWidget.cpp  PIEWidget.h  PIEWidget.ui
Editor/Resources/: Resource.qrc
Editor/Viewport/: Viewport.cpp  Viewport.h  ViewportRenderer.cpp  ViewportRenderer.h
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Base/: SingletonBase.cpp  SingletonBase.h
Engine/Source/Runtime/Core/Public/: gngin_type.h
Engine/Source/Runtime/Engine/Internal/: Engine.cpp  Engine_Internal.h  gEngineMain.cpp  gEngineMain.h
Engine/Source/Runtime/Engine/Public/: Engine.h
Runtime/: CMakeLists.txt  gn_dll.h
Runtime/Classes/GameInstance/: GameInstance.cpp  GameInstance.h
Runtime/Classes/SGameInstance/: CMakeLists.txt  SGameInstance.cpp  SGameInstance.h
Runtime/Core/: gengine.cpp  gengine.h
Runtime/Core/Application/: Application.cpp  Application.h  ApplicationQt_Impl.cpp  ApplicationQt_Impl.h  Application_Impl.cpp  Application_Impl.h
Runtime/Core/CoreManager/: CoreManager.cpp  CoreManager.h
Runtime/Core/Logging/: Logging.cpp  Logging.h
Runtime/Core/Main/: Main.cpp  Main.h
Runtime/Core/Renderer/: Renderer.cpp  Renderer.h  RendererQtGL_Impl.cpp  RendererQtGL_Impl.h  Renderer_Impl.cpp  Renderer_Impl.h
Runtime/Core/Window/: Window.cpp  Window.h  WindowQtGL_Impl.cpp  WindowQtGL_Impl.h  WindowQt_Impl.cpp  WindowQt_Impl.h  Window_Impl.cpp  Window_Impl.h
SampleApplication/: CMakeLists.txt  SampleApplication.cpp
SampleProjects/MinimumProject/Source/: MinimumProject.cpp  MinimumProject.gnmain.cpp  MinimumProject.h
test/test_CppAndRust/implementation/: Cargo.toml  build.rs
test/test_CppAndRust/source/: main.cpp
